modules/shared-vpc/root.tf
data "aws_availability_zones" "available" {
}

data "aws_caller_identity" "current" {}
data "aws_region" "current" {}
data "aws_partition" "current" {}
data "aws_organizations_organization" "tna" {}

resource "aws_vpc" "main" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support   = true
  tags = merge(
    var.common_tags,
    tomap(
      { "Name" = "tdr-vpc-${var.environment}" }
    )
  )
}

# Bring default security group under Terraform management and remove all rules
resource "aws_default_security_group" "default" {
  vpc_id = aws_vpc.main.id
}

# The frontend uses the network interface IPs which come from the range in this subnet.
# If any changes are made to this subnets IP range, the front end will need to be re-deployed.
# Create var.az_count public subnets, each in a different AZ
resource "aws_subnet" "public" {
  count                   = var.az_count
  cidr_block              = cidrsubnet(aws_vpc.main.cidr_block, 8, var.az_count + count.index)
  availability_zone       = data.aws_availability_zones.available.names[count.index]
  vpc_id                  = aws_vpc.main.id
  map_public_ip_on_launch = true

  tags = merge(
    var.common_tags,
    tomap(
      { "Name" = "tdr-public-subnet-${count.index}-${var.environment}" }
    )
  )
}

# Internet Gateway for the public subnet
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id
}

# Route the public subnet traffic through the IGW
resource "aws_route" "internet_access" {
  route_table_id         = aws_vpc.main.main_route_table_id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.gw.id
}

# Create a NAT gateway with an Elastic IP for each private subnet to get internet connectivity
resource "aws_eip" "gw" {
  count      = var.az_count
  domain     = "vpc"
  depends_on = [aws_internet_gateway.gw]

  tags = merge(
    var.common_tags
  )
}

resource "aws_nat_gateway" "gw" {
  count         = var.az_count
  subnet_id     = aws_subnet.public.*.id[count.index]
  allocation_id = aws_eip.gw.*.id[count.index]

  tags = merge(
    var.common_tags,
    tomap(
      { "Name" = "nat-gateway-${count.index}-tdr-${var.environment}" }
    )
  )
}

# Create a new route table for the private subnets, make it route non-local traffic through the NAT gateway to the internet
resource "aws_route_table" "private" {
  count  = var.az_count
  vpc_id = aws_vpc.main.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.gw.*.id[count.index]
  }

  tags = merge(
    var.common_tags,
    tomap(
      { "Name" = "route-table-${count.index}-tdr-${var.environment}" }
    )
  )
}

# The old private subnet was deleted in TDRD-1221
# What was "private-backend-checks" subnet is now the new "private-subnet"
resource "aws_subnet" "private_backend_checks" {
  count             = 2
  cidr_block        = cidrsubnet(aws_vpc.main.cidr_block, 6, count.index + 4)
  availability_zone = data.aws_availability_zones.available.names[count.index]
  vpc_id            = aws_vpc.main.id
  tags = merge(
    var.common_tags,
    tomap(
      { "Name" = "tdr-private-subnet-${count.index}-${var.environment}" }
    )
  )
}

resource "aws_route_table_association" "private_backend_checks_association" {
  count          = 2
  subnet_id      = aws_subnet.private_backend_checks.*.id[count.index]
  route_table_id = aws_route_table.private.*.id[count.index]
}

# Create an S3 gateway endpoint and update the route table to use it
# Attach a policy that allows access only from within the org and to the starport ECR buckets
resource "aws_vpc_endpoint" "s3_endpoint" {
  vpc_id       = aws_vpc.main.id
  service_name = "com.amazonaws.${data.aws_region.current.region}.s3"

  tags = merge(
    var.common_tags,
    tomap(
      { "Name" = "com.amazonaws.${data.aws_region.current.region}.s3" }
    )
  )
}

resource "aws_vpc_endpoint_policy" "s3_endpoint" {
  vpc_endpoint_id = aws_vpc_endpoint.s3_endpoint.id
  policy = templatefile("./templates/endpoint_policies/s3_org_only_access_plus_starport.tpl",
    {
      vpc_id          = aws_vpc.main.id
      organisation_id = data.aws_organizations_organization.tna.id,
      region          = data.aws_region.current.region
  })
}

resource "aws_vpc_endpoint_route_table_association" "s3_endpoint_private" {
  count           = 2
  route_table_id  = aws_route_table.private.*.id[count.index]
  vpc_endpoint_id = aws_vpc_endpoint.s3_endpoint.id
}

# TDRD-964 ECR Endpoint
resource "aws_security_group" "endpoint_security_group" {
  name        = "tdr-endpoint-security-group"
  description = "Allow 443 inbound from VPC only"
  vpc_id      = aws_vpc.main.id

  tags = merge(
    var.common_tags,
    tomap(
      { "Name" = "tdr-endpoint-security-group" }
    )
  )
}

resource "aws_vpc_security_group_ingress_rule" "endpoint_security_group_tls_ingress" {
  security_group_id = aws_security_group.endpoint_security_group.id
  cidr_ipv4         = aws_vpc.main.cidr_block
  from_port         = 443
  ip_protocol       = "tcp"
  to_port           = 443
}

resource "aws_vpc_endpoint" "vpc_endpoints_ecr" {
  for_each            = toset(["com.amazonaws.eu-west-2.ecr.dkr", "com.amazonaws.eu-west-2.ecr.api"])
  vpc_id              = aws_vpc.main.id
  service_name        = each.key
  security_group_ids  = [aws_security_group.endpoint_security_group.id]
  subnet_ids          = aws_subnet.private_backend_checks.*.id
  private_dns_enabled = true
  vpc_endpoint_type   = "Interface"
  tags = merge(
    var.common_tags,
    tomap(
      { "Name" = each.key }
    )
  )
}

resource "aws_vpc_endpoint_policy" "vpc_endpoints_ecr_policy" {
  for_each        = aws_vpc_endpoint.vpc_endpoints_ecr
  vpc_endpoint_id = each.value.id
  policy = templatefile("./templates/endpoint_policies/ecr_same_org.tpl",
    {
      organisation_id       = data.aws_organizations_organization.tna.id
      aws_guardduty_ecr_arn = var.aws_guardduty_ecr_arn
  })
}

resource "aws_vpc_endpoint" "vpc_endpoints_api_gateway" {
  vpc_id              = aws_vpc.main.id
  service_name        = "com.amazonaws.eu-west-2.execute-api"
  security_group_ids  = [aws_security_group.endpoint_security_group.id]
  subnet_ids          = aws_subnet.private_backend_checks.*.id
  private_dns_enabled = false
  vpc_endpoint_type   = "Interface"
  tags = merge(
    var.common_tags,
    tomap(
      { "Name" = "com.amazonaws.eu-west-2.execute-api" }
    )
  )
}
